changed value of MAVEN_OPTS